Id e nome do usuario sendo listado em post